@@ -20,3 +20,15 @@ if (window.location.href.indexOf("bizjournals.com") !== -1) {
     paywall[0].parentNode.removeChild(paywall[0]);
   }
 }
+
+if (location.hostname.endsWith('haaretz.co.il')) {
+  const html = document.getElementsByTagName('html');
+  if (html && html.length > 0) {
+    html[0].style['overflow-y'] = 'auto';
+  }
+
+  const msg = document.getElementById('article-wrapper');
+  if (msg) {
+    msg.style['display'] = 'none';
+  }
+}
